tests/machine/x/ex/closure.mochi.error
line 3
** (SyntaxError) /workspace/mochi/tests/machine/x/ex/closure.mochi.exs:3:48: syntax error before: '->'
    |
  3 | 	@spec makeAdder(integer()) :: fun((integer()) -> integer())
    |                                                ^
    (elixir 1.14.0) lib/code.ex:1245: Code.require_file/2

# Generated by Mochi Elixir compiler
defmodule Main do
	@spec makeAdder(integer()) :: fun((integer()) -> integer())
	def makeAdder(n) do
		try do
