tests/machine/x/ex/closure.mochi.exs
# Generated by Mochi Elixir compiler
defmodule Main do
	@spec makeAdder(integer()) :: fun((integer()) -> integer())
	def makeAdder(n) do
		try do
			throw {:return, fn x -> (x + n) end}
		catch {:return, v} -> v end
	end
	
	def main do
		# add10 :: fun((integer()) -> integer())
		add10 = makeAdder(10)
		IO.puts(add10.(7))
	end
	end
Main.main()
